--- a/src/main/resources/templates/administrador/usuarios.html
+++ b/src/main/resources/templates/administrador/usuarios.html
@@ -11,12 +11,13 @@
   <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link th:href="@{/css/administrador/usuarios.css}" rel="stylesheet">
+  <link th:href="@{/css/administrador/template_admin.css}" rel="stylesheet">
 
 </head>
 
 <body>
   <!-- Navigation -->
-  <div th:include="administrador/template_admin.html::header"></div>
+  <div th:replace="administrador/template_admin.html::header"></div>
 
   <!-- Page Content -->
   <div class="container">
@@ -29,13 +30,7 @@
       <p class="page-subtitle">Administra todos los usuarios registrados en la plataforma</p>
     </div>
 
-    <!-- Breadcrumb -->
-    <nav class="breadcrumb-custom">
-      <div class="breadcrumb-item">
-        <a th:href="@{/admin}">🏠 Home</a>
-      </div>
-      <div class="breadcrumb-item active">Usuarios</div>
-    </nav>
+ 
 
     <!-- Stats Grid -->
     <div class="stats-grid">
@@ -140,7 +135,7 @@
   </div>
 
   <!-- Footer -->
-  <div th:include="administrador/template_admin.html::footer"></div>
+  <div th:replace="administrador/template_admin.html::footer"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
