--- a/src/main/resources/templates/productos/create.html
+++ b/src/main/resources/templates/productos/create.html
@@ -11,12 +11,13 @@
   <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link th:href="@{/css/productos/create.css}" rel="stylesheet">
+  <link th:href="@{/css/administrador/template_admin.css}" rel="stylesheet">
 
 </head>
 
 <body>
   <!-- Navigation -->
-  <div th:include="administrador/template_admin.html::header"></div>
+  <div th:replace="administrador/template_admin.html::header"></div>
 
   <!-- Page Content -->
   <div class="container">
@@ -27,18 +28,7 @@
         <span>Crear Producto</span>
       </h1>
       <p class="page-subtitle">Agrega un nuevo producto al catálogo de MarketPlace</p>
-    </div>
-
-    <!-- Breadcrumb -->
-    <nav class="breadcrumb-custom">
-      <div class="breadcrumb-item">
-        <a href="/admin">🏠 Home</a>
-      </div>
-      <div class="breadcrumb-item">
-        <a href="/productos">📦 Productos</a>
-      </div>
-      <div class="breadcrumb-item active">Crear Producto</div>
-    </nav>
+    </div>    
 
     <!-- Info Cards -->
     <div class="info-cards">
@@ -215,7 +205,7 @@
   </div>
 
   <!-- Footer -->
-  <div th:include="administrador/template_admin.html::footer"></div>
+  <div th:replace="administrador/template_admin.html::footer"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
