--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -11,6 +11,7 @@
   <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link th:href="@{/css/usuario/productohome.css}" rel="stylesheet">
+  <link th:href="@{/css/usuario/template_usuario.css}" rel="stylesheet">
    
 </head>
 
@@ -22,12 +23,6 @@
   <div class="page-header">
     <div class="container">
       <h1 class="page-title">🛍️ Detalles del Producto</h1>
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a th:href="@{/}">Inicio</a></li>
-          <li class="breadcrumb-item active">Producto</li>
-        </ol>
-      </nav>
     </div>
   </div>
 
