--- a/src/main/resources/templates/productos/edit.html
+++ b/src/main/resources/templates/productos/edit.html
@@ -11,12 +11,13 @@
   <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link th:href="@{/css/productos/edit.css}" rel="stylesheet">
+  <link th:href="@{/css/administrador/template_admin.css}" rel="stylesheet">
 
 </head>
 
 <body>
   <!-- Navigation -->
-  <div th:include="administrador/template_admin.html::header"></div>
+  <div th:replace="administrador/template_admin.html::header"></div>
 
   <!-- Page Content -->
   <div class="container">
@@ -29,17 +30,6 @@
       </h1>
       <p class="page-subtitle">Actualiza la información del producto en tu catálogo</p>
     </div>
-
-    <!-- Breadcrumb -->
-    <nav class="breadcrumb-custom">
-      <div class="breadcrumb-item">
-        <a href="/admin">🏠 Home</a>
-      </div>
-      <div class="breadcrumb-item">
-        <a href="/productos">📦 Productos</a>
-      </div>
-      <div class="breadcrumb-item active">Editar Producto</div>
-    </nav>
 
     <!-- Info Cards -->
     <div class="info-cards">
@@ -231,7 +221,7 @@
   </div>
 
   <!-- Footer -->
-  <div th:include="administrador/template_admin.html::footer"></div>
+  <div th:replace="administrador/template_admin.html::footer"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
