--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -9,6 +9,7 @@
   <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
   <!-- Custom styles -->
   <link th:href="@{/css/usuario/carrito.css}" rel="stylesheet">
+  <link th:href="@{/css/usuario/template_usuario.css}" rel="stylesheet">
 </head>
 
 <body>
@@ -20,12 +21,6 @@
   <div class="page-header">
     <div class="container">
       <h1 class="page-title">🛒 Carrito de Compras</h1>
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a th:href="@{/}">Inicio</a></li>
-          <li class="breadcrumb-item active">Carrito</li>
-        </ol>
-      </nav>
     </div>
   </div>
 
@@ -56,7 +51,7 @@
                     <tr th:each="dorden : ${cart}" class="cart-item">
                       <td>
                         <div class="product-info">
-                          <img src="https://via.placeholder.com/80" alt="Producto" class="product-image">
+							<img th:src="@{/images/{img} (img=${dorden.producto.imagen})}" alt="Producto" class="product-image">
                           <div class="product-details">
                             <div class="product-name" th:text="${dorden.nombre}"></div>
                             <div class="product-description">Producto de calidad</div>
