--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <title>MarketPlace - Tu Tienda Online</title>
+	<head>
+	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	  <title>MarketPlace - Tu Tienda Online</title>
 
-  <!-- Bootstrap core CSS -->
-  <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link th:href="@{css/usuario/home.css}" rel="stylesheet">
+	  <!-- Bootstrap core CSS -->
+	  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+	  <!-- Template CSS (header/footer) -->
+	  <link th:href="@{/css/usuario/template_usuario.css}" rel="stylesheet">
+	  <!-- Home específico -->
+	  <link th:href="@{/css/usuario/home.css}" rel="stylesheet">
+	</head>
 
-</head>
 
 <body>
   <!-- Navigation -->
@@ -132,7 +132,8 @@
   <div th:insert="~{usuario/template_usuario.html::footer}"></div>
 
   <!-- Bootstrap core JavaScript -->
-  <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+  <script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+
 </body>
 </html>
